All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2016-05-17 niel
	Chg: Remove autopatcher script functionality. Replace with message to use ./zed update nzedb.
2016-05-17 ruhllatio
	Mrg: Feature couchpotato #2148 @DariusIII
2016-05-17 DariusIII
	Fix: Add artist - title display to Gamma music page. Fixes issue #2149
	Fix: Add back 'None' to themes selection list in profile edit, so admin selected theme is used
2016-05-16 bart39
	Fix: Buffer nzb creation fixes #2139.
2016-05-16 niel
	Fix: Profile edit included non theme names in its dropdown list.
2016-05-16 ruhllatio
	Mrg: PR from Meganomic, Req Feature: Search Movies #1581 #2125
	Chg: Clean up NZB class file indents and query strings
	Fix: NZBImport now sets the nzb_guid during the import
2016-05-13 ruhllatio
	Fix: PostProcess Additional tmux query not accurate with PP add queue
2016-05-12 niel
	Add: Reporting oupt for update git,db commands.
2016-05-12 ruhllatio
	Fix: Browse ordering wrong due to added minSize push
	Mrg: PR Add leftguid column to releases to improve threading work queries #2144
	Chg: Improve fixRelNames work queries
2016-05-12 DariusIII
	* Fix: Remove derefferer links from CouchPotato url in Gamma theme.
2016-05-11 bart39
	Fix: fix patch 438 / schema.
	Chg: Added some logging to help diagnose issue #2139
	Chg: detect broken nzbs in clean nzbs.
	Chg: add method for rarinfo if missing.
2016-05-11 ruhllatio
	Chg: Make some var changes in PP Add
	Fix: fix patch 438 missing trigger updates for release search table
	Fix: Invalid index errors in NameFixer caused by bad find and replaces in feature-db (temp)
	Fix: PP Add query using old releaseid
	Add: Feature request - Option to specify the minimum file size using the API? #234
	Fix: Undefined index: anidb #2137