@@ -56,6 +56,7 @@
 								</a>
 							{if $cpurl != '' && $cpapi != ''}
 								<a
+									id="imdb{$result->alternate_ids->imdb}"
 									class="sendtocouch"
 									title="Add to CouchPotato">
 									<img src="{$smarty.const.WWW_TOP}/themes/shared/img/icons/couch.png">
