@@ -91,6 +91,7 @@
 										<a class="rndbtnsml" target="_blank" href="{$site->dereferrer_link}http://trakt.tv/search/imdb/tt{$result.imdbid}/" name="trakt{$result.imdbid}" title="View trakt page">Trakt</a>
 										{if $cpurl != '' && $cpapi != ''}
 											<a
+												id="imdb{$result.imdbid}"
 												class="rndbtnsml sendtocouch"
 												title="Add to CouchPotato">Couch
 											</a>
