@@ -29,6 +29,7 @@
 							<a class="rndbtnsml" target="_blank" href="{$site->dereferrer_link}http://trakt.tv/search/imdb/tt{$result->alternate_ids->imdb}/" name="trakt{$result->alternate_ids->imdb}" title="View trakt page">Trakt</a>
 							{if $cpurl != '' && $cpapi != ''}
 								<a
+									id="imdb{$result.imdbid}"
 									class="rndbtnsml sendtocouch"
 									title="Add to CouchPotato">CouchPotato
 								</a>
